<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="36dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/pupil_s_image" />

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/dummy_kid"
            android:contentDescription="@string/pick_image" />

        <View
            android:layout_width="8dp"
            android:layout_height="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <androidx.cardview.widget.CardView
                android:id="@+id/pick_dummy_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                app:cardBackgroundColor="@color/colorPrimary"
                android:background="@color/colorPrimary"
                android:text="Select this image"
                android:textColor="#ffffffff">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:paddingVertical="4dp"
                    android:paddingHorizontal="12dp"
                    android:textColor="@color/white"
                    android:text="Select this dummy image" />

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Or:" />

            <EditText
                android:id="@+id/dialog_pupil_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter image Url"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/pupil_s_name" />

    <EditText
        android:id="@+id/dialog_pupil_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/pupil_s_country" />

    <EditText
        android:id="@+id/dialog_pupil_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/longitude" />

    <EditText
        android:id="@+id/dialog_pupil_log"
        android:layout_width="match_parent"
        android:inputType="number"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/latitude" />

    <EditText
        android:id="@+id/dialog_pupil_lat"
        android:layout_width="match_parent"
        android:inputType="number"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <Button
        android:id="@+id/dialog_btn_add_pupil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/add_pupil"
        android:textColor="#ffffffff" />

</LinearLayout>